--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
+    <h1>Welcome to Parth Kothari's Personal Webpage</h1>
     <p>This is a basic website hosted on GitHub!</p>
+    <main>
+        Hi, I am Parth Kothari, a second-year Master's student in astronomy at IIT Indore. I have a passion for observational and simulation in cosmology. I am interested in Data science career jobs!  
+    </main>
 </body>
 </html>
